syntax = "proto3";

package kayak.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/binarymatt/kayak/gen/kayak/v1;kayakv1";

service AdminService {
  rpc AddVoter(AddVoterRequest) returns (AddVoterResponse) {}
  rpc Stats(StatsRequest) returns (StatsResponse) {}
  rpc Leader(LeaderRequest) returns (LeaderResponse) {}
}

message AddVoterRequest {
  string id = 1 [(buf.validate.field).required = true];
  string address = 2 [(buf.validate.field).required = true];
}

message AddVoterResponse {}

message StatsRequest {}
message ConfigItem {
  string suffrage = 1;
  string id = 2;
  string address = 3;
  bool is_leader = 4;
}
message StatsResponse {
  string state = 1;
  repeated ConfigItem nodes = 2;
  string last_contact = 3;
  map<string, string> stats = 4;
}

message LeaderRequest {}
message LeaderResponse {
  string address = 1;
  string id = 2;
}
